# todo

./: .gitignore  Cargo.toml  todos.json
.github/workflows/: main.yml
src/: README.md  cli.rs  controllers.rs  data.rs  delegate.rs  double_click.rs  main.rs  tasks.rs  view.rs
