[package]
name = "todo"
version = "0.1.0"
authors = ["krionbsd <kp@krion.cc>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
druid = { version = "0.7.0", features = ["im"]}
serde = { version = "1.0.72", features = ["derive"] }
serde_json = "1.0.72"
uuid = { version = "0.8.1", features = ["serde", "v4"] }
